k8s/flux/cluster/apps/infra/harbor/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: kube-prometheus-stack
  annotations:
    hajimari.io/icon: simple-icons:grafana
    hajimari.io/enable: true
    # hajimari.io/appName: "Grafana"
    # hajimari.io/group: "Monitoring"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: harbor-ingress.mujak.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-svc
            port:
              number: 80
  tls:
  - hosts: 
    - harbor-ingress.mujak.id
    secretName: harbor-ingress-certs
